src/objects/Apttus_Config2__HelpDoc__c.object
<CustomObject>
    <description>Object holds help documentation</description>
    <fields>
        <fullName>Apttus_Config2__Answer__c</fullName>
        <description>Answer help documentation</description>
        <inlineHelpText>Answer help documentation</inlineHelpText>
        <label>Answer</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__QuestionSequence__c</fullName>
        <description>Question sequence for display ordering</description>
        <inlineHelpText>Question sequence for display ordering</inlineHelpText>
        <label>Question Sequence</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__Question__c</fullName>
        <description>Question help documentation</description>
        <inlineHelpText>Question help documentation</inlineHelpText>
        <label>Question</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TabName__c</fullName>
        <description>Name of the help documentation tab</description>
        <inlineHelpText>Name of the help documentation tab</inlineHelpText>
        <label>Tab Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_Config2__TabSequence__c</fullName>
        <description>Tab display display sequence</description>
        <inlineHelpText>Tab display display sequence</inlineHelpText>
        <label>Tab Sequence</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Help Doc</label>
    <nameField>
        <label>HelpDoc Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Help Docs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>